@@ -63,6 +63,8 @@ class CHttpRequest extends CApplicationComponent
 	private $_cookies;
 	private $_preferredLanguage;
 	private $_csrfToken;
+	private $_deleteParams;
+	private $_putParams;
 
 	/**
 	 * Initializes the application component.
@@ -155,6 +157,53 @@ class CHttpRequest extends CApplicationComponent
 	public function getPost($name,$defaultValue=null)
 	{
 		return isset($_POST[$name]) ? $_POST[$name] : $defaultValue;
+	}
+
+	/**
+	 * Returns the named DELETE parameter value.
+	 * If the DELETE parameter does not exist or if the current request is not a DELETE request,
+	 * the second parameter to this method will be returned.
+	 * @param string $name the DELETE parameter name
+	 * @param mixed $defaultValue the default parameter value if the DELETE parameter does not exist.
+	 * @return mixed the DELETE parameter value
+	 * @since 1.1.7
+	 */
+	public function getDelete($name,$defaultValue=null)
+	{
+		if($this->_deleteParams===null)
+			$this->_deleteParams=$this->getIsDeleteRequest() ? $this->getRestParams() : array();
+		return isset($this->_deleteParams[$name]) ? $this->_deleteParams[$name] : $defaultValue;
+	}
+
+	/**
+	 * Returns the named PUT parameter value.
+	 * If the DELETE parameter does not exist or if the current request is not a PUT request,
+	 * the second parameter to this method will be returned.
+	 * @param string $name the PUT parameter name
+	 * @param mixed $defaultValue the default parameter value if the PUT parameter does not exist.
+	 * @return mixed the DELETE parameter value
+	 * @since 1.1.7
+	 */
+	public function getPut($name,$defaultValue=null)
+	{
+		if($this->_putParams===null)
+			$this->_putParams=$this->getIsPutRequest() ? $this->getRestParams() : array();
+		return isset($this->_putParams[$name]) ? $this->_putParams[$name] : $defaultValue;
+	}
+
+	/**
+	 * Returns the PUT or DELETE request parameters.
+	 * @return array the request parameters
+	 * @since 1.1.7
+	 */
+	protected function getRestParams()
+	{
+		$result=array();
+		if(function_exists('mb_parse_str'))
+			mb_parse_str(file_get_contents('php://input'), $result);
+		else
+			parse_str(file_get_contents('php://input'), $result);
+		return $result;
 	}
 
 	/**
@@ -392,12 +441,32 @@ class CHttpRequest extends CApplicationComponent
 	}
 
 	/**
-	 * Returns whether this is an POST request.
-	 * @return boolean whether this is an POST request.
+	 * Returns whether this is a POST request.
+	 * @return boolean whether this is a POST request.
 	 */
 	public function getIsPostRequest()
 	{
 		return isset($_SERVER['REQUEST_METHOD']) && !strcasecmp($_SERVER['REQUEST_METHOD'],'POST');
+	}
+
+	/**
+	 * Returns whether this is a DELETE request.
+	 * @return boolean whether this is a DELETE request.
+	 * @since 1.1.7
+	 */
+	public function getIsDeleteRequest()
+	{
+		return isset($_SERVER['REQUEST_METHOD']) && !strcasecmp($_SERVER['REQUEST_METHOD'],'DELETE');
+	}
+
+	/**
+	 * Returns whether this is a PUT request.
+	 * @return boolean whether this is a PUT request.
+	 * @since 1.1.7
+	 */
+	public function getIsPutRequest()
+	{
+		return isset($_SERVER['REQUEST_METHOD']) && !strcasecmp($_SERVER['REQUEST_METHOD'],'PUT');
 	}
 
 	/**
